-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.12.0 Beta 1
-
None
-
d973907f6e4aae492dfad3eaad6827ffdc49962b (qt/qtdeclarative/5.12)
void QSortFilterProxyModelPrivate::sort() { ... emit q->layoutChanged(QList<QPersistentModelIndex>(), QAbstractItemModel::VerticalSortHint); }
After this, the TableView does not immediately reorder the delegates, but flicking back and forth will make it do that.
A workaround is in my QSortFilterProxyModel subclass (which is necessary mainly because sort() is not Q_INVOKABLE), I can use beginResetModel(); sort(); endResetModel();
For Gerrit Dashboard: QTBUG-71140 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
242785,4 | TableView: connect to 'layoutChanged' signal from the model | 5.12 | qt/qtdeclarative | Status: MERGED | +2 | 0 |