TableView: connect to 'layoutChanged' signal from the model

Ensure we rebuild the table when the model emits 'layoutChanged'.

Fixes: QTBUG-71140
Change-Id: I70dac897830bf5a12ae6987920e388743fd358a1
Reviewed-by: Shawn Rutledge <shawn.rutledge@qt.io>