src/quick/items/qquicktableview_p_p.h
@@ -356,6 +356,7 @@ public:
     void rowsRemovedCallback(const QModelIndex &parent, int begin, int end);
     void columnsInsertedCallback(const QModelIndex &parent, int begin, int end);
     void columnsRemovedCallback(const QModelIndex &parent, int begin, int end);
+    void layoutChangedCallback(const QList<QPersistentModelIndex> &parents, QAbstractItemModel::LayoutChangeHint hint);
     void modelResetCallback();
 
     void _q_componentFinalized();
